--- a/site/docsource/OCaml-call-JS.adoc
+++ b/site/docsource/OCaml-call-JS.adoc
@@ -1,6 +1,6 @@
 ## BuckleScript annotations for Unicode and JS FFI support
 
-To make OCaml work smoothly with Javascript, we introduced several
+To make OCaml work smoothly with JavaScript, we introduced several
 extensions to the OCaml language. These BuckleScript extensions
 facilitate the integration of native JavaScript code and
 improve the generated code.
@@ -9,10 +9,10 @@ improve the generated code.
 
 [WARNING]
 ========
-In this section, we assume the source is encoded using UTF8
+In this section, we assume the source is encoded using UTF8.
 ========
 
-In OCaml, string is an immutable byte sequence (like GoLang), so if user type some Unicode
+In OCaml, string is an immutable byte sequence (like GoLang), so if the user types some Unicode
 
 [source,ocaml]
 --------------
@@ -26,7 +26,7 @@ It will be translated into
 console.log("\xe4\xbd\xa0\xe5\xa5\xbd");
 -----------
 
-Luckily, OCaml allows customized multiple-line string support, BuckleScript *reserves* the delimiter `js` and `j`(`j` is unused yet). 
+Luckily, OCaml allows customized multiple-line string support, BuckleScript *reserves* the delimiter `js` and `j` (`j` is unused so far). 
 
 [source,ocaml]
 --------------
@@ -40,7 +40,7 @@ Js.log {js|你好，
 console.log("你好，\n世界");
 --------------
 
-Inside `js` delimiter, the escape convention is like JavaScript
+Inside the `js` delimiter, the escape convention is like JavaScript
 
 [source,ocaml]
 --------------
@@ -62,7 +62,7 @@ Like TypeScript, when building type-safe bindings from JS to OCaml,
 users have to write type declarations.
 In OCaml, unlike TypeScript, users do not need to create a separate
 `.d.ts` file,
-since the type declarations is an integral part of OCaml.
+since the type declarations are an integral part of OCaml.
 
 The FFI is divided into several components:
 
@@ -70,7 +70,7 @@ The FFI is divided into several components:
 - Binding to high-order functions
 - Binding to object literals
 - Binding to classes
-- Extensions to the language for debugger, regex and embedding arbitrary JS
+- Extensions to the language for debugger, regex, and embedding arbitrary JS
 code
 
 ### Binding to simple JS functions values
@@ -105,8 +105,8 @@ it can be a function or plain value.
 
 [NOTE]
 =====
-* If `external-declaration` is the same as `value-name`, user can leave `external-declaration` empty,
-for example:
+* If `external-declaration` is the same as `value-name`, the user can leave `external-declaration` empty.
+For example:
 +
 [source,ocaml]
 -------------
@@ -184,7 +184,7 @@ external http : http = "http" [@@bs.module] // <1>
 
 [NOTE]
 ======
-*  if `external-declaration` is the same as value-name, it can be left empty, for example,
+*  if `external-declaration` is the same as value-name, it can be left empty, for example:
 +
 [source,ocaml]
 --------------
@@ -195,7 +195,7 @@ external http : http = "" [@@bs.module]
 
 #### Binding to method: bs.send, bs.send.pipe
 
-`bs.send` helps the user send a message to a JS object
+`bs.send` helps the user send a message to a JS object.
 
 [source,ocaml]
 ---------
@@ -236,7 +236,7 @@ let test arr =
 
 [NOTE]
 ======
-*  if `external-declaration` is the same as value-name, it can be left empty, for example,
+*  if `external-declaration` is the same as value-name, it can be left empty, for example:
 +
 [source,ocaml]
 --------------
@@ -271,8 +271,8 @@ external get_name : textarea -> string = "name" [@@bs.get]
 
 ### Splice calling convention: bs.splice
 
-In JS, it is quite common to have a function take variadic arguments,
-BuckleScript support typing homogeneous variadic arguments. For example,
+In JS, it is quite common to have a function take variadic arguments.
+BuckleScript supports typing homogeneous variadic arguments. For example,
 
 [source,ocaml]
 --------------
@@ -290,15 +290,15 @@ var v = Path.join("a","b")
 [NOTE]
 ======
 For the external call, if the `array` arguments is not a compile time array,
-the compiler will emit an error message
+the compiler will emit an error message.
 ======
 
 
 ### Special types on external declarations: bs.string, bs.int, bs.ignore, bs.as
 
 #### Using polymorphic variant to model enums and string types
-There are several patterns heavily used in existing JavaScript codebase, for example,
-string type is used a lot. BuckleScript FFI allows to model string type in a safe
+There are several patterns heavily used in existing JavaScript codebases, for example,
+the string type is used a lot. BuckleScript FFI allows the user to model string type in a safe
 way by using annotated polymorphic variant.
 
 [source,ocaml]
@@ -341,7 +341,7 @@ external test_int_type :
 
 #### Using polymorphic variant to model event listener
 
-BuckleScript model this in a type-safe way by using annotated polymorphic variants
+BuckleScript models this in a type-safe way by using annotated polymorphic variants.
 
 [source,ocaml]
 --------------
@@ -358,7 +358,7 @@ let register rl =
   |> on (`close (fun event -> () ))
   |> on (`line (fun line -> print_endline line))
 --------------
-<1> This is a very powerful typing: each event can have its _different types_
+<1> This is a very powerful typing: each event can have its own _different types_.
 
 Output:
 [source,js]
@@ -503,8 +503,8 @@ var config = {
 
 ### Binding to NodeJS special variables: bs.node
 
-NodeJS has several file local variables: `__dirname`, `__filename`, `_module`, and `require`,
-their semantics are more like macros instead of functions.
+NodeJS has several file local variables: `__dirname`, `__filename`, `_module`, and `require`.
+Their semantics are more like macros instead of functions.
 
 BuckleScript provides built-in macro support for these variables:
 
@@ -556,7 +556,7 @@ let f x y = x + y
 let g x  = let z  = x + 1 in fun y -> x + z
 --------------------------------------------
 
-In OCaml, they all have the same type; however,
+In OCaml they all have the same type; however,
 `f` and `g` may be compiled into functions with
 different arities.
 
@@ -649,7 +649,7 @@ type 'a u2 = int -> string -> (int -> 'a [@bs]) [@bs] // <3>
 <1>  `u0` has arity of 2, return a function
    with arity 1
 <2>  `u1` has arity of 3
-<3>  `u2` has arity of 2, reutrn a function  with arity 1
+<3>  `u2` has arity of 2, return a function with arity 1
 
 #### [@bs.uncurry] for implicit uncurried callback (@since 1.5.0)
 
@@ -679,7 +679,7 @@ map [|1;2;3|] (fun x -> x+ 1) // <2>
 
 [NOTE]
 ======
-In general, `bs.uncurry` is recommended, and compiler will do lots of optimizations to resolve the `curry` to `uncurry` calling convention in the compile time. However, there are some cases the compiler optimizer could not do it, in that case, it will be converted runtime. 
+In general, `bs.uncurry` is recommended, and compiler will do lots of optimizations to resolve the `curry` to `uncurry` calling convention at compile time. However, there are some cases the compiler optimizer could not do it, in that case, it will be converted runtime. 
 
 This means `[@bs]` are completely static behavior (no any runtime cost), while `[@bs.uncurry]` is more convenient for end users but in some very rare cases it might be slower than `[@bs]`
 ======
@@ -858,11 +858,11 @@ object method dispatch.
 
 OCaml supports object oriented style natively and provides structural type system.
 OCaml's object system has different runtime semantics from JS object, but they
-share the same type system, all JS objects of type `'a` is typed as `'a Js.t`
+share the same type system, all JS objects of type `'a` are typed as `'a Js.t`
 
-OCaml provide two kinds of syntaxes to mode structural typing: `< p1 : t1 >` style and
-`class type` style, they are mostly the same except that the latter is more feature rich
-(support inheritance) but more verbose.
+OCaml provides two kinds of syntaxes to model structural typing: `< p1 : t1 >` style and
+`class type` style. They are mostly the same except that the latter is more feature rich
+(supporting inheritance) but more verbose.
 
 #### Simple object type
 
@@ -902,7 +902,7 @@ There are too kinds of types on the method name:
 < label : int -> int [@bs.meth] >
 --------------
 
-The difference is that for `method`, the type system will force users to full-fil
+The difference is that for `method`, the type system will force users to fulfill
 its arguments all at the same time, since its semantics depends on `this` in JavaScript.
 
 For example:
@@ -926,7 +926,7 @@ val test : < hi : int -> 'a [@bs.meth]; .. > -> 'a // <1>
 val test2 : < hi : int -> 'a ; .. > -> 'a
 val test3 : < hi : int -> 'a [@bs]; .. >
 --------------
-<1> `..` is a row variable, which means the object can contain more methods
+<1> `..` is a row variable, which means the object can contain more methods.
 
 
 #### Complex object type
@@ -943,7 +943,7 @@ end [@bs] // <1>
 type rect = _rect Js.t
 --------------------------------
 <1> `class type` annotated with `[@bs]` is treated as a JS class type,
-it needs to be lifted to `Js.t` too
+it needs to be lifted to `Js.t` too.
 
 For JS classes, methods with arrow types are treated as real methods
 (automatically annotated with `[@bs.meth]`)
@@ -968,8 +968,8 @@ f##property // <1>
 f##property#= v
 f##js_method args0 args1 args2 <2>
 -------------------------------------------------------------
-<1> property get should not come with any argument as we discussed above, which will be checked by the compiler
-<2> Here `method` is of arity 3
+<1> property get should not come with any argument as we discussed above, which will be checked by the compiler.
+<2> Here `method` is of arity 3.
 
 [NOTE]
 =====
@@ -1064,7 +1064,7 @@ NOTE: Getter/Setter also applies to class type label
 #### Create JS objects using bs.obj
 
 Not only can we create bindings to JS objects, but also we can
-create JS objects in a type safe way in OCaml side:
+create JS objects in a type safe way on the OCaml side:
 
 
 [source,ocaml]
@@ -1079,7 +1079,7 @@ Output:
 var u = { x : { y : { z : 3 }}}}
 --------------------------------
 
-The compiler would infer `u` as type
+The compiler would infer `u` as type:
 
 [source,ocaml]
 --------------------
@@ -1087,7 +1087,7 @@ val u : < x :  < y : < z : int > Js.t >  Js.t > Js.t
 --------------------
 
 To make it more symmetric,  extension `bs.obj` can also be applied
-into the type level, so you can write
+into the type level, so you can write:
 
 [source,ocaml]
 --------------
@@ -1140,7 +1140,7 @@ let v = make_config ~lo:2 ~hi:3  ()
 ---------------------------------------------------------------------
 <1> In OCaml, the order of label does not matter, and the evaluation order
     of arguments is undefined. Since the order does not matter, to make sure the compiler realize all the arguments
-    are full-filled (including optional arguments), it is common to have a `unit` type before the result
+    are fulfilled (including optional arguments), it is common to have a `unit` type before the result.
 
 Output:
 [source,js]
@@ -1161,8 +1161,8 @@ let h = u##x##y##z
 let a = h##fn
 let b = a 1 2 [@bs]
 --------------
-<1> `fn` property is not method, it does not rely on `this`,
-we will show how to create JS method in OCaml later.
+<1> `fn` property is not method, it does not rely on `this`.
+We will show how to create JS method in OCaml later.
 
 Output:
 [source,js]
@@ -1243,7 +1243,7 @@ end [@bs]
 
 
 
-Below is another example to consume JS object :
+Below is another example to consume a JS object :
 
 [source,ocaml]
 --------------
@@ -1282,9 +1282,9 @@ f
 
 #### Object label translation convention
 
-There are two cases, we might want to do a name mangling for JS object method name.
+There are two cases, where we might want to do name mangling for a JS object method name.
 
-First, in OCaml, some names are keywords, we want to add an underscore to make it not a syntax
+First, in OCaml, some names are keywords, so we want to add an underscore to avoid a syntax
 error. 
 
 .Key-word method:
@@ -1301,9 +1301,9 @@ f.open
 f.MAX_LENGTH
 -----------
 
-Second, it is common to have several types for a single method, to model
+Second, it is common to have several types for a single method. To model
 this ad-hoc polymorphism, we introduced a small convention when translating
-object labels, this is _occasionally_ useful as below
+object labels, which is _occasionally_ useful as below
 
 .Ad-hoc polymorphism
 [source,ocaml]
@@ -1339,9 +1339,9 @@ f.draw(x,y)
 In general, the FFI code is error prone, and potentially will leak in
 `undefined` or `null` values. 
 
-So we introduced auto coercion for return values for two benefits:
+So we introduced auto coercion for return values to gain two benefits:
 
-1. More safety for FFI code without performance cost (explained later)
+1. More safety for FFI code without performance cost (explained later).
 
 2. More idiomatic OCaml code for users to consume the FFI.
 
@@ -1378,31 +1378,31 @@ function test(dom) {
 -------------
 <1> nullable checking without boxing due to compiler optimizations
 
-Currently, 4 directives are supported: `null_to_opt`, `undefined_to_opt`, 
-, `null_undefined_to_opt` and `identity`.
+Currently 4 directives are supported: `null_to_opt`, `undefined_to_opt`, 
+`null_undefined_to_opt` and `identity`.
 
 [NOTE]
 ======
 `null_to_opt`, `undefined_to_opt` and `null_undefined_to_opt` will *semantically*
-convert nullable value to `option` which is a boxed value, but the compiler will 
+convert a nullable value to `option` which is a boxed value, but the compiler will 
 do smart optimizations to *remove such boxing overhead* when the returned value is destructed 
 in the same routine.
 
-The three directives above require users to write literally `_ option`, it is
+The three directives above require users to write literally `_ option`. It is
 in theory not necessary, but it is required to reduce user errors.
 
-When return type is `unit`: the compiler will append its return value 
-with an OCaml `unit` literal to make sure it does return `unit`, its main purpose
-is to make user consume FFI in idiomatic OCaml code, the cost is *very very small* and 
-the compiler will do smart optimizations to remove it when the returned value is not used (mostly likely)
+When the return type is `unit`: the compiler will append its return value 
+with an OCaml `unit` literal to make sure it does return `unit`. Its main purpose
+is to make the user consume FFI in idiomatic OCaml code, the cost is *very very small* and 
+the compiler will do smart optimizations to remove it when the returned value is not used (mostly likely).
  
-When return type is `bool`, the compiler will coerce its return value from 
+When the return type is `bool`, the compiler will coerce its return value from 
 JS boolean to OCaml boolean. The cost is also *very small* and compiler will remove
 such coercion when it is not needed. Note even if your external FFI does return OCaml `bool` or `unit`, 
 such implicit coercion will *cause no harm*.
 
-`identity` will make sure that compiler will do nothing about returned value, it 
-is rarely used but introduced here for debugging purpose.
+`identity` will make sure that compiler will do nothing about the returned value. It 
+is rarely used, but introduced here for debugging purpose.
 ======
 
 
@@ -1415,14 +1415,14 @@ is rarely used but introduced here for debugging purpose.
 =========
 This is not encouraged. The user should minimize and
 localize use cases
-of embedding raw Javascript code, however, sometimes it's necessary to
+of embedding raw JavaScript code, however, sometimes it's necessary to
 get the job done.
 =========
 
 
-####  Detect global varialbe existence `bs.external` (@since 1.5.1)
+####  Detect global variable existence `bs.external` (@since 1.5.1)
 
-Before we dive into embedding arbitrary JS code, a quite common use case of embedding untyped JS code is detect a global variable(feature detection), Bucklescript provides a relatively type safe approach for such use case: `bs.external` (or `extenral`),
+Before we dive into embedding arbitrary JS code, a quite common use case of embedding untyped JS code is detect a global variable (feature detection), Bucklescript provides a relatively type safe approach for such use case: `bs.external` (or `extenral`),
  `[%bs.external a_single_identifier]` is a value of `_ option` type, see examples below 
 
 [source,ocaml]
@@ -1556,7 +1556,7 @@ which will be compiled into:
 ### Regex support
 
 
-We introduced `bs.re` for Javascript regex expression:
+We introduced `bs.re` for Javascript regex expressions:
 
 [source,ocaml]
 ------------------------
@@ -1564,21 +1564,21 @@ let f  = [%bs.re "/b/g"]
 ------------------------
 
 The compiler will infer `f` has type `Js.Re.t` and generate code as
-below
+below:
 
 ------------
 var f = /b/g
 ------------
 
 
-NOTE: `Js.Re.t` can be accessed and manipulated using the functions available in the `Js.Re` module
+NOTE: `Js.Re.t` can be accessed and manipulated using the functions available in the `Js.Re` module.
 
 
 
 ### Examples
 
 
-Below is a simple example for https://mochajs.org/[mocha] library. For
+Below is a simple example for the https://mochajs.org/[mocha] library. For
 more examples, please visit
 https://github.com/bloomberg/bucklescript-addons
 
@@ -1598,7 +1598,7 @@ external it : string -> (unit -> unit [@bs]) -> unit = "" [@@bs.val]
 
 Since, `mochajs` is a test framework, we also need some assertion
  tests. We can also describe the bindings to `assert.deepEqual` from
- nodejs `assert` library:
+ the nodejs `assert` library:
 
 [source,ocaml]
 ----------
